@@ -621,10 +621,6 @@ Bytecode generation
 we could recognize adjacent catch clauses with empty bodies and point
 them all to the same bytecode block
 
-can turn `goto X; ... X: return' into plain return
-this is smaller; gcj seems to do it
-
-
 Most verifiers can't verify the code generated by most compilers for
 this code:
 
